tests/ui/pin_mut_alias.stderr
error[E0277]: `PhantomPinned` cannot be unpinned
  --> tests/ui/pin_mut_alias.rs:15:18
   |
15 |             type Arg = crate::arg::Arg;
   |                  ^^^ within `arg::Arg`, the trait `Unpin` is not implemented for `PhantomPinned`
   |
   = note: consider using the `pin!` macro
           consider using `Box::pin` if you need to access the pinned value outside of the current scope
note: required because it appears within the type `arg::Arg`
  --> tests/ui/pin_mut_alias.rs:5:12
   |
 5 |     struct Arg(PhantomPinned);
   |            ^^^
note: required by a bound in `require_unpin`
  --> src/rust_type.rs
   |
   | pub fn require_unpin<T: ?Sized + Unpin>() {}
   |                                  ^^^^^ required by this bound in `require_unpin`

error[E0277]: `PhantomPinned` cannot be unpinned
  --> tests/ui/pin_mut_alias.rs:35:18
   |
35 |             type Receiver = crate::receiver::Receiver;
   |                  ^^^^^^^^ within `receiver::Receiver`, the trait `Unpin` is not implemented for `PhantomPinned`
   |
   = note: consider using the `pin!` macro
           consider using `Box::pin` if you need to access the pinned value outside of the current scope
note: required because it appears within the type `receiver::Receiver`
  --> tests/ui/pin_mut_alias.rs:25:12
   |
25 |     struct Receiver(PhantomPinned);
   |            ^^^^^^^^
note: required by a bound in `require_unpin`
  --> src/rust_type.rs
   |
   | pub fn require_unpin<T: ?Sized + Unpin>() {}
   |                                  ^^^^^ required by this bound in `require_unpin`

error[E0277]: `PhantomPinned` cannot be unpinned
  --> tests/ui/pin_mut_alias.rs:55:18
   |
55 |             type Receiver2 = crate::receiver2::Receiver2;
   |                  ^^^^^^^^^ within `receiver2::Receiver2`, the trait `Unpin` is not implemented for `PhantomPinned`
   |
   = note: consider using the `pin!` macro
           consider using `Box::pin` if you need to access the pinned value outside of the current scope
note: required because it appears within the type `receiver2::Receiver2`
  --> tests/ui/pin_mut_alias.rs:45:12
   |
45 |     struct Receiver2(PhantomPinned);
   |            ^^^^^^^^^
note: required by a bound in `require_unpin`
  --> src/rust_type.rs
   |
   | pub fn require_unpin<T: ?Sized + Unpin>() {}
   |                                  ^^^^^ required by this bound in `require_unpin`
